# zmk-locale-generator

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  LICENSE  README.md  lint-staged.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  pre-commit.yaml  pre-commit.yml  release.yaml
keyboards/: README.md  keyboards.yaml
scripts/: batch_generate.py  batch_locales.py  keyboards.py  locales.yaml  update_codepoints.py
zmk_locale_generator/: __init__.py  __main__.py  cldr.py  codepoints.py  codepoints.yaml  generator.py  keyboards.py  keys.h  keys.py  locales.py  typing.py  update_codepoints.py  util.py
zmk_locale_generator/keyboards/: README.md  keyboards.yaml
